# flatinfo

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: analysis.py  api.py  config.py  logging_setup.py  main.py  market_data.py  schemas.py
backend/app/services/: advisor.py  cache.py  geocode.py  market.py  throttle.py
backend/tests/: conftest.py  test_advisor.py  test_analysis.py  test_api.py  test_cache.py  test_geocode.py  test_market.py  test_suggest.py  test_suggest_dedup.py  test_throttle.py
deploy/: auto-update.sh
deploy/nginx/: flatinfo.conf
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: AssumptionsForm.tsx  NetWorthChart.tsx  ResultSkeleton.tsx  ResultView.tsx  SearchBox.tsx  globals.css  layout.tsx  page.tsx
frontend/app/api/suggest/: route.ts
frontend/lib/: api.ts  format.ts  types.ts
